--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,23 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+nix            = "0.19"
+tempfile       = "3"
+failure        = "0.1"
+
+# serialize
+serde          = "1"
+serde_derive   = "1"
+serde_json     = "1"
+
+# command args to struct
+structopt      = "0.3"
+structopt-toml = "0.4"
+
+lazy_static = "1.4.0"
+
+regex = "1"
+
+# gitignore
+# docs: https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore
+ignore = "0.4"
