--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Inherd Group <group@inherd.org>", "Phodal Huang <h@phodal.com>"]
 edition = "2018"
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/inherd/modling"
-documentation = "https://github.com/inherd/modling"
-homepage = "https://github.com/inherd/modling"
+repository = "https://github.com/inherd/modeling"
+documentation = "https://github.com/inherd/modeling"
+homepage = "https://github.com/inherd/modeling"
 description = """
 Modeling is a tools to analysis different languages by Ctags
 """
