--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,21 @@ jobs:
           git submodule sync --recursive
           git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
 
+      - name: Install ctags on Linux
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo snap install universal-ctags
+
+      - name: Install ctags on macOS
+        if: matrix.os == 'macOS-latest'
+        run: |
+          brew update
+          brew install --HEAD universal-ctags/universal-ctags/universal-ctags
+
+      - name: Install ctags on Windows
+        if: matrix.os == 'windows-latest'
+        run: |
+          choco install universal-ctags
+
       - name: Run unit tests
         run: ${{matrix.ENV_VARS}} cargo test
-
-      - name: Run e2e
-        run: ${{matrix.ENV_VARS}} cargo build --release
