--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        include:
+          - os: ubuntu-latest
+            artifact_name: modeling
+            asset_name: modeling-linux-amd64
+          - os: windows-latest
+            artifact_name: modeling.exe
+            asset_name: modeling-windows-amd64
+          - os: macos-latest
+            artifact_name: modeling
+            asset_name: modeling-macos-amd64
 
     steps:
       - uses: actions/checkout@v1
@@ -26,8 +35,8 @@ jobs:
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v1-release
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: target/release/modeling
-          asset_name: modeling
-          tag: ${{ github.ref }}
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: target/release/${{ matrix.artifact_name }}
+        asset_name: ${{ matrix.asset_name }}
+        tag: ${{ github.ref }}
