--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,5 @@ regex = "1"
 # gitignore
 # docs: https://github.com/BurntSushi/ripgrep/tree/master/crates/ignore
 ignore = "0.4"
+
+clap = "3.0.0-beta.2"
