--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,10 @@ clap = "3.0.0-beta.2"
 structopt      = "0.3"
 structopt-toml = "0.4"
 
+# https://crates.io/crates/grep-regex
+grep-regex = "0.1.9"
+grep-searcher = "0.1.8"
+
 similar =  { version = "2.1.0", features = ["text", "inline", "bytes"] }
 console = "0.15.0"
 
