feat: make concepting in beauty

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ grep-searcher = "0.1.8"
 similar =  { version = "2.1.0", features = ["text", "inline", "bytes"] }
 console = "0.15.0"
 
+prettytable-rs = "^0.8"
+
 [workspace]
 members = [
     "sqling",
